[workspace]
resolver = "2"
members = [
  "contracts/*"
]

[workspace.package]
edition = "2021"
publish = false
repository = ""

[workspace.dependencies]
near-sdk = { version = "5.8.0", features = ["unstable"] }
near-contract-standards = "5.8.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true