[package]
name = "rhea"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.12.2-rust-1.82.0"
image_digest = "sha256:ed398028ef25d49a7a4b3d96dfe3c358745c8db246d9421b05e8ae937aaaf55a"
passed_env = []
container_build_command = ["cargo", "near", "build"]

[dependencies]
near-sdk.workspace = true
near-contract-standards.workspace = true
